--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 section{
     height: 500px;
-    padding-bottom: 100px;
+    padding-bottom: 200px;
 }
 
 .first-banner{
@@ -55,3 +55,12 @@ p{
     color: darkgray;
 }
 
+.second-banner{
+    background-image: url("images/biography-bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+#second-banner-text{
+    margin-top: 120px;
+    margin-right: 8%;
+}
