--- a/style.css
+++ b/style.css
@@ -61,6 +61,34 @@ p{
     background-position: center;
 }
 #second-banner-text{
-    margin-top: 120px;
+    margin-top: 130px;
     margin-right: 8%;
+}
+
+.third-banner{
+    background-image: url("images/latest-work-bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-right: 12%;
+    padding-left: 8%;
+    margin-top: 50px;
+}
+
+.third-width{
+    width: 30%;
+    float: right;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.third-width img{
+    width: 100%;
+    margin-right: 30px;
+    margin-top: 80px;
+}
+
+#third-h2{
+    font-size: 30px;
+    font-weight: 800;
+    margin-top: 60px;
 }
